[gd_scene load_steps=2 format=3 uid="uid://cyb6ux7imrqsh"]

[ext_resource type="Script" path="res://Scripts/UI/PartySelection.gd" id="1_6ya15"]

[node name="PartySelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ya15")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Party Selection"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayerSection" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SectionLabel" type="Label" parent="HBoxContainer/PlayerSection"]
layout_mode = 2
text = "Your Party (Select up to 4)"
horizontal_alignment = 1

[node name="PartyContainer" type="HBoxContainer" parent="HBoxContainer/PlayerSection"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="RosterLabel" type="Label" parent="HBoxContainer/PlayerSection"]
layout_mode = 2
text = "Available Characters"
horizontal_alignment = 1

[node name="RosterGrid" type="GridContainer" parent="HBoxContainer/PlayerSection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="Separator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="EnemySection" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SectionLabel" type="Label" parent="HBoxContainer/EnemySection"]
layout_mode = 2
text = "Enemy Team (Select 1-4)"
horizontal_alignment = 1

[node name="PartyContainer" type="HBoxContainer" parent="HBoxContainer/EnemySection"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="RosterLabel" type="Label" parent="HBoxContainer/EnemySection"]
layout_mode = 2
text = "Available Enemies"
horizontal_alignment = 1

[node name="RosterGrid" type="GridContainer" parent="HBoxContainer/EnemySection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Start Combat"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 120.0
offset_bottom = -10.0
grow_vertical = 0
text = "Back"